--- a/src/css/base.css
+++ b/src/css/base.css
@@ -47,7 +47,7 @@ html.loaded #view {
 	box-sizing: border-box;
 	overflow-x: hidden;
 	overflow-y: auto;
-	padding: 2rem;
+	padding: 1rem;
 	margin: 0 auto;
 }
 .view-inner {
@@ -57,11 +57,11 @@ html.loaded #view {
 	font-weight: 700;
 	font-size: 1.6rem;
 	text-align: center;
-	margin-bottom: 2rem;
+	margin-bottom: 1rem;
 }
 .page-description {
 	text-align: center;
-	margin-bottom: 2rem;
+	margin-bottom: 1rem;
 }
 #message {
 	position: absolute;
@@ -88,6 +88,7 @@ html.loaded #view {
 	display: inline-block;
 	vertical-align: top;
 	color: #f7f7f7;
+	text-align: left;
 	background: rgba(0, 0, 0, .9);
 	border-radius: .5rem;
 	padding: 1rem;
