--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -6,14 +6,14 @@
 	width: 100%;
 }
 .form-row + .form-row {
-	margin-top: 1.5rem;
+	margin-top: 1rem;
 }
 .form-group + .form-group {
-	margin-top: 2rem;
+	margin-top: 1.5rem;
 }
 .form-label {
 	display: block;
-	font-size: 1.2rem;
+	font-size: 1rem;
 	margin-bottom: .5rem;
 }
 .form-field {
@@ -88,6 +88,11 @@
 	background-size: 1.4rem;
 	box-sizing: border-box;
 	padding: .9rem 1.2rem;
+}
+.form-field-action.button {
+	box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,.14),
+				0 0.22rem 0.1rem -0.2rem rgba(0,0,0,.2),
+				0 0.1rem 0.4rem 0 rgba(0,0,0,.12);
 }
 .form-field-action + .form-field-action {
 	margin-left: .3rem;
