--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -17,7 +17,9 @@
 	margin-bottom: .5rem;
 }
 .form-field {
+	position: relative;
 	font-size: 0.9rem;
+	padding-right: 0;
 }
 .form-field-description {
 	margin-bottom: 0.5rem;
@@ -76,7 +78,11 @@
 	font-size: 0.9rem;
 }
 .form-field-actions {
-	margin-top: .5rem;
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: auto;
+	margin-top: 0;
 }
 .form-field-action {
 	display: inline-block;
@@ -89,13 +95,16 @@
 	box-sizing: border-box;
 	padding: .9rem 1.2rem;
 }
+.form-field.has-1-actions { padding-right: 3rem; }
+.form-field.has-2-actions { padding-right: 6rem; }
+.form-field.has-3-actions { padding-right: 9rem; }
+.form-field-action + .form-field-action {
+	margin-left: .3rem;
+}
 .form-field-action.button {
 	box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,.14),
 				0 0.22rem 0.1rem -0.2rem rgba(0,0,0,.2),
 				0 0.1rem 0.4rem 0 rgba(0,0,0,.12);
-}
-.form-field-action + .form-field-action {
-	margin-left: .3rem;
 }
 .form-field-action.camera { background-image: url('../images/camera.svg'); }
 .form-field-action.cycle {
