--- a/src/css/base.css
+++ b/src/css/base.css
@@ -114,7 +114,7 @@ html.loaded #view {
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 14rem 21rem;
-	background-image: url('../images/favicon.svg');
+	background-image: url('../images/app-loading.svg');
 	margin: 0 auto;
 }
 #cover-text {
