Keyboard plugin to customize styles when keyboard visible

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -138,3 +138,6 @@ html.loaded.busy #cover-image {
 	background-color: #fff;
 	box-shadow: 0 0 8px rgba(0,0,0,.4);
 }
+html.keyboard-visible .secondary-controls {
+	display: none;
+}
