--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -108,6 +108,10 @@
 	background-size: 1rem;
 	background-image: url('../images/cycle.svg');
 }
+.form-field-action.select-all {
+	background-size: 1rem;
+	background-image: url('../images/select-all.svg');
+}
 .form-description {
 	font-size: .9rem;
 	margin-bottom: .5rem;
