--- a/src/css/views/receive.css
+++ b/src/css/views/receive.css
@@ -1,10 +1,23 @@
+.view.receive {
+	padding-bottom: 7rem;
+}
 .view.receive .page-title {
 	position: absolute;
 	left: 0;
-	top: 3rem;
+	top: 1rem;
 	width: 100%;
+	height: 2rem;
+	line-height: 2rem;
 	text-align: center;
 	margin: 0;
+}
+.view.receive .address {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+	padding-top: 3.5rem;
+	padding-bottom: 5.5rem;
 }
 .view.receive .address-instructions,
 .view.receive .address-text {
@@ -18,28 +31,22 @@
 }
 .view.receive .address-instructions {
 	top: 0;
-	padding-bottom: 2rem;
+	padding-bottom: 1rem;
 }
 .view.receive .address-text {
 	bottom: 0;
 	font-weight: 100;
 	font-family: 'Courier';
-	font-size: 1.25rem;
-	line-height: 1.8rem;
-	letter-spacing: .3rem;
+	font-size: 1.2rem;
+	line-height: 1.7rem;
+	letter-spacing: .25rem;
 	word-break: break-all;
 	padding-top: 2rem;
-}
-.view.receive .address {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	box-sizing: border-box;
-	padding-top: 6rem;
-	padding-bottom: 6rem;
 }
 .view.receive .address-qrcode {
 	display: block;
 	width: 100%;
 	height: 100%;
+}
+.view.receive .copy-to-clipboard {
 }
