--- a/src/css/views/configure.css
+++ b/src/css/views/configure.css
@@ -1,6 +1,7 @@
-.view-configure .form-input[name="address"] {
+.view-configure .form-input[name="address"],
+.view-configure .form-input[name="wif"] {
 	color: #fff;
-	font-weight: 700;
+	font-weight: 100;
 	font-family: 'Courier';
 	letter-spacing: .2rem;
 }
