--- a/src/css/views/send.css
+++ b/src/css/views/send.css
@@ -61,60 +61,25 @@
 .view.send .scoreboard .scoreboard-3rd.pending {
 	color: #aaa;
 }
-.view.send .utxo {
+.view.send .balance {
 	position: absolute;
 	left: 0;
-	top: 6.8rem/* scoreboard height+margin */;
+	top: 7.6rem/* scoreboard height+margin */;
 	width: 100%;
-	height: 3.2rem;
-	font-size: .85rem;
+	height: 2.4rem;
+	line-height: 2.4rem;
+	font-size: 1.2rem;
+	text-align: center;
 }
-.view.send .utxo table {
-	width: 100%;
-	border: .1rem solid #eee;
+.view.send .balance-value {
+	display: inline;
+	font-weight: 700;
+	padding-right: .25rem;
 }
-.view.send .utxo th {
-	font-weight: bold;
-}
-.view.send .utxo th:first-child,
-.view.send .utxo td:first-child {
-	text-align: left;
-}
-.view.send .utxo th:last-child,
-.view.send .utxo td:last-child {
-	text-align: right;
-}
-.view.send .utxo th,
-.view.send .utxo td {
-	height: 1.2rem;
-	line-height: 1.2rem;
-	border-bottom: .1rem solid #eee;
-	padding: 0 .4rem;
-}
-.view.send .utxo tr:last-child td {
-	border-bottom: none;
-}
-.view.send .utxo-empty {
-	font-size: 1rem;
-	font-style: italic;
-	margin-bottom: .5rem;
-}
-.view.send .button.refresh-utxo {
-	display: inline-block;
-	vertical-align: top;
-	width: 1rem;
-	height: 1rem;
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-size: 1rem;
-	background-repeat: no-repeat;
-	background-image: url('../images/cycle.svg');
-	box-sizing: border-box;
-	padding: .8rem 1.1rem;
-	margin-top: .6rem;
-}
-.view.send .button.refresh-utxo {
-	display: none;
+.view.send .balance-symbol {
+	display: inline;
+	font-weight: 100;
+	padding-left: .25rem;
 }
 .view.send .form {
 	position: absolute;
