--- a/src/css/views/history.css
+++ b/src/css/views/history.css
@@ -1,11 +1,25 @@
 .view.history {
 	padding: 0;
 }
+.view.history .history-empty {
+	display: block;
+	font-style: italic;
+	font-weight: 100;
+	text-align: center;
+	padding: 3rem 1rem;
+}
+.view.history.has-items .history-empty {
+	display: none;
+}
 .view.history table {
+	display: none;
 	width: 100%;
 	font-size: .9rem;
 	border-spacing: 0;
 	border-collapse: collapse;
+}
+.view.history.has-items table {
+	display: table;
 }
 .view.history th {
 	font-weight: 700;
