--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,7 +4,7 @@
 	display: none;
 	vertical-align: top;
 	width: 100%;
-	height: 4.1rem;
+	height: 3.6rem;
 	background: #f7f7f7;
 	box-sizing: border-box;
 	padding: 0;
@@ -17,12 +17,12 @@ html.loaded #header {
 	z-index: 20;
 	float: left;
 	display: block;
-	width: 4.1rem;
-	height: 4.1rem;
+	width: 3.6rem;
+	height: 3.6rem;
 	background-color: transparent;
-	background-position: center center;
+	background-position: center;
 	background-repeat: no-repeat;
-	background-size: 2.7rem 2.7rem;
+	background-size: 2.2rem;
 	box-sizing: border-box;
 	cursor: pointer;
 }
